--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Kevin Joy">
     <meta property="og:title" content="Kevin Joy | Data Analytics Professional">
     <meta property="og:description" content="Financial Data Analyst & Deputy Branch Head at Naval Cost Agency | Operations Research & Machine Learning Expert">
-    <meta property="og:image" content="images/IMG-20181018-WA0002.jpg">
+    <meta property="og:image" content="images/IMG_4248.jpg">
     <meta property="og:url" content="https://frankij11.github.io">
     
     <!-- Google Analytics -->
