--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="images/IMG_4248.jpg" alt="Kevin Joy" class="rounded-full h-64 w-64 object-cover border-4 border-white shadow-xl">
+                <img src="images/IMG_4248.jpg" alt="Kevin Joy" class="rounded-full h-64 w-64 object-cover object-top border-4 border-white shadow-xl">>
             </div>
         </div>
     </header>
