--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="md:w-1/2 mb-10 md:mb-0">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4">Kevin Joy</h1>
                 <h2 class="text-2xl md:text-3xl mb-6">Data Analytics Professional</h2>
-                <p class="text-lg mb-8">Financial Data Analyst & Deputy Branch Head at Naval Cost Agency | Operations Research & Machine Learning Expert | Data Strategy Consultant | Specializing in Predictive Modeling & Cost Estimation</p>
+                <p class="text-lg mb-8">Financial Data Analyst & Deputy Branch Head at Naval Cost Agency | Operations Research & Machine Learning Expert | Data Strategy | Specializing in Predictive Modeling & Cost Estimation</p>
                 <div class="flex space-x-4">
                     <a href="#contact" class="bg-white text-blue-600 px-6 py-2 rounded-full font-semibold hover:bg-gray-100">Get in Touch</a>
                     <a href="#projects" class="border border-white text-white px-6 py-2 rounded-full font-semibold hover:bg-white hover:text-blue-600">View Projects</a>
